fixed svg spacing

--- a/src/sass/components/_how.sass
+++ b/src/sass/components/_how.sass
@@ -52,6 +52,9 @@
       z-index: 2
       width: 80%
       overflow: visible
+    svg
+      margin-top: -20%
+      margin-bottom: -15%
     .animation-icons
       transition: all .1s ease
 
